fix: footer z-index

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   height: 100vh;
   background-color: $background-color;
+  z-index: 100;
 
   & .contentContainer {
     align-self: stretch;
@@ -23,6 +24,7 @@
       flex-direction: column;
       align-items: center;
       flex-grow: 1;
+      z-index: 300;
     }
   }
 }
